[package]
name = "orecchiette-sdr-pluto-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false
description = "Analog Devices ADALM-Pluto (PlutoSDR) implementation of the SdrSource trait."
license = "GPL-3.0-or-later"

[dependencies]
orecchiette-sdr-source-rs = { git = "https://github.com/isaacbentley/orecchiette-sdr-source-rs.git", branch = "main" }
industrial-io = "0.6"
crossbeam = "0.8"
num-complex = "0.4"
anyhow = "1.0"
tracing = "0.1"
